fix: remove WhatsAppService dependency, implement EmailService with OTP verification, add verification fields to User schema, and fix security issues by removing postman.json with exposed secrets

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ lerna-debug.log*
 .temp
 .tmp
 
+# Postman collections (may contain sensitive data)
+*.postman_collection.json
+postman.json
+
 # Runtime data
 pids
 *.pid
